# pco-labo6

./: .gitignore  README.md
code/: CMakeLists.txt  display.cpp
code/build-labo6_gui-Desktop-Debug/: CMakeCache.txt  Makefile  PCO_lab06_gui.cbp  cmake_install.cmake
code/build-labo6_gui-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-246e05c00888e89d13f5.json  cmakeFiles-v1-8540bb594a84d1195766.json  codemodel-v2-e3c8db529f7c5a10d980.json  index-2023-12-31T13-44-33-0844.json  target-PCO_lab06_gui-Debug-ea1fcaaa1cf6309c97dc.json  (+1 more)
code/build-labo6_gui-Desktop-Debug/PCO_lab06_gui_autogen/: moc_predefs.h
code/build-labo6_gui-Desktop-Debug/PCO_lab06_gui_autogen/SQM33X5GNA/: moc_guiinterface.cpp  moc_guiinterface.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_simview.cpp  moc_simview.cpp.d
code/build-labo6_tests-Desktop-Debug/: CMakeCache.txt  Makefile  PCO_lab06_tests.cbp  cmake_install.cmake
code/build-labo6_tests-Desktop-Debug/PCO_lab06_tests_autogen/: moc_predefs.h
code/build-src-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  labo6_lib.cbp
code/src/: application.cpp  application.h  barber.cpp  barber.h  client.cpp  client.h  computationmanager.cpp  computationmanager.cpp.IJIbSG  computationmanager.h  computationmanager.h.autosave  computationmanager.h.jnnPij  main.cpp  pcosalon.cpp  pcosalon.h  salon.h  salonbarberinterface.h  salonclientinterface.h
code/src/utils/: display.cpp  display.h  graphicsaloninterface.cpp  graphicsaloninterface.h  launchable.h  mainwindow.cpp  mainwindow.h
(+11 files in other folders)
